fix scrollbar

--- a/styles.css
+++ b/styles.css
@@ -101,10 +101,12 @@ button:hover {
 
 .links-scrollable {
     max-height: 300px;
-    overflow-y: auto;
+    overflow-y: overlay; /* Полоса прокрутки внутри блока */
     border-radius: 10px;
     padding: 10px;
     background-color: #1e1e1e;
+    scrollbar-width: thin; /* Для Firefox */
+    scrollbar-color: #3498db transparent; /* Для Firefox */
 }
 
 .links-scrollable ul {
@@ -154,7 +156,7 @@ button:hover {
 }
 
 .links-scrollable::-webkit-scrollbar-track {
-    background-color: #1e1e1e;
+    background-color: transparent;
 }
 
 /* Светлая тема */
